[gd_scene load_steps=27 format=4]

[ext_resource type="Script" path="res://stages/extra/click_bonus_game/scripts/bonus_level.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d3srfe2r6fg2u" path="res://engine/objects/core/music_loader/music_loader.tscn" id="2"]
[ext_resource type="Resource" uid="uid://biwuot8qud6ob" path="res://music/extra/u_feel_it.mod" id="3"]
[ext_resource type="PackedScene" uid="uid://cat0b6208nfnh" path="res://components/secrets_manager/secret_unlocker.tscn" id="4"]
[ext_resource type="Script" path="res://objects/player_camera_custom/player_camera_custom.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://s4fip2enup6u" path="res://stages/extra/click_bonus_game/objects/heads_up_display.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dscgi7k51j58n" path="res://stages/extra/click_bonus_game/objects/star/star.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://b5477r418vvmg" path="res://tilesets/skyland/gfx/big_clouds.png" id="8"]
[ext_resource type="Texture2D" uid="uid://mxicaln3cacf" path="res://stages/extra/click_bonus_game/textures/fancy_bg.png" id="9"]
[ext_resource type="Script" path="res://engine/scripts/nodes/effects/quality_visible.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://b5qvo4xgdxnrv" path="res://objects/wide_clouds_moving/texture.png" id="11"]
[ext_resource type="Script" path="res://objects/wide_clouds_moving/wide_clouds_moving.gd" id="12"]
[ext_resource type="Texture2D" uid="uid://dboyy56p5qal4" path="res://objects/wide_clouds_moving/texture_alpha.png" id="13"]
[ext_resource type="PackedScene" uid="uid://1do11cr84k7y" path="res://engine/objects/players/player.tscn" id="14"]
[ext_resource type="TileSet" uid="uid://dtvs1rult8kbe" path="res://tilesets/overworld_green/overworld_green.tres" id="15"]
[ext_resource type="PackedScene" uid="uid://5ssr5jwpsldi" path="res://engine/objects/bumping_blocks/question_block/templates/Coin Question Block.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://b8kgbn8f7lvf0" path="res://engine/objects/items/coin/coin.tscn" id="17"]
[ext_resource type="Script" path="res://engine/objects/powerups/instance_powerup.gd" id="18"]
[ext_resource type="PackedScene" uid="uid://2yepdgrhpmj3" path="res://engine/objects/bumping_blocks/brick/brick.tscn" id="19"]
[ext_resource type="PackedScene" uid="uid://vqn6y17pt5mx" path="res://engine/objects/enemies/goombas/goomba.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://cgw53vgjiurmx" path="res://objects/generic_water/generic_water_custom.tscn" id="21"]
[ext_resource type="Texture2D" uid="uid://0atqoof1v43b" path="res://gfx/fancy_graphics/746.png" id="22"]
[ext_resource type="PackedScene" uid="uid://bfcf0c50beo18" path="res://stages/extra/click_bonus_game/objects/star_finder_cursor/star_finder_cursor.tscn" id="23"]

[sub_resource type="Gradient" id="Gradient_q18w8"]
colors = PackedColorArray(0.2313729971647263, 0.482353001832962, 0.6392160058021545, 1, 1, 1, 0.9882349967956543, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qrgok"]
gradient = SubResource("Gradient_q18w8")
width = 480

[sub_resource type="Resource" id="Resource_0uqxv"]
script = ExtResource("18")
resource_local_to_scene = true
creation_fallback_node = null
creation_nodepack = ExtResource("17")
trans_offset = Vector2(0, 0)
trans_inheritances = 7
trans_rotation = 0.0
trans_scale = Vector2(1, 1)
trans_skew = 0.0
visi_z_index = 0
visi_z_as_relative = true
visi_y_sort_enabled = false
custom_vars = {}
custom_script = null

[node name="BonusLevel-1" type="Control"]
physics_interpolation_mode = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="MusicLoader" parent="." instance=ExtResource("2")]
music = [ExtResource("3")]
play_immediately = false
start_from_sec = [0.0, 103.8]

[node name="SecretUnlocker" parent="." instance=ExtResource("4")]
secrets = ["all bonus levels beaten"]
progress_by_id = "one"
progress_to = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.4
one_shot = true
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 480
script = ExtResource("5")

[node name="Heads-Up Display" parent="." instance=ExtResource("6")]
visible = false

[node name="Stars" type="Node2D" parent="."]
z_index = 99

[node name="Star" parent="Stars" instance=ExtResource("7")]
position = Vector2(93, 258)
rotation = 0.4363319873809814
scale = Vector2(0.1500000059604645, 0.1500000059604645)

[node name="Star4" parent="Stars" instance=ExtResource("7")]
position = Vector2(198, 106)
rotation = 0.4363319873809814
scale = Vector2(0.1500000059604645, 0.1500000059604645)

[node name="Star2" parent="Stars" instance=ExtResource("7")]
position = Vector2(249, 186)
rotation = 0.4363319873809814
scale = Vector2(0.25, 0.25)

[node name="Star5" parent="Stars" instance=ExtResource("7")]
position = Vector2(583, 135)
rotation = 0.4363319873809814
scale = Vector2(0.25, 0.25)

[node name="Star3" parent="Stars" instance=ExtResource("7")]
position = Vector2(524, 235)
scale = Vector2(0.300000011920929, 0.300000011920929)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(640, 0)
rotation = 1.570799946784973
scale = Vector2(1, 640)
texture = SubResource("GradientTexture1D_qrgok")
centered = false
metadata/_edit_lock_ = true

[node name="BigClouds" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(0, 320)
texture = ExtResource("8")

[node name="FancyBg" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(320, 240)
texture = ExtResource("9")
script = ExtResource("10")
metadata/_edit_lock_ = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(320, 57)
texture = ExtResource("11")
region_enabled = true
region_rect = Rect2(0, 0, 784, 64)
script = ExtResource("12")

[node name="TextureAlpha" type="Sprite2D" parent="Sprite2D2"]
position = Vector2(0, 32)
texture = ExtResource("13")
region_enabled = true
region_rect = Rect2(0, 0, 784, 32)
script = ExtResource("10")

[node name="Sprite2D3" type="Sprite2D" parent="."]
z_index = 25
texture_repeat = 2
position = Vector2(320, 32)
texture = ExtResource("11")
region_enabled = true
region_rect = Rect2(0, 0, 784, 64)
script = ExtResource("12")
speed = 100.0

[node name="Mario" parent="." instance=ExtResource("14")]
position = Vector2(128, 336)
collision_layer = 0

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("15")
format = 2
layer_0/tile_data = PackedInt32Array(983044, 131072, 2, 917508, 131072, 1, 851972, 131072, 0, 983043, 65536, 2, 917507, 65536, 1, 851971, 65536, 0, 983042, 0, 2, 917506, 0, 1, 851970, 0, 0, 983056, 65536, 2, 917520, 65536, 1, 851984, 65536, 0, 983055, 65536, 2, 917519, 65536, 1, 851983, 65536, 0, 983054, 65536, 2, 917518, 65536, 1, 851982, 65536, 0, 983053, 65536, 2, 917517, 65536, 1, 851981, 65536, 0, 983052, 65536, 2, 917516, 65536, 1, 851980, 65536, 0, 983051, 65536, 2, 917515, 65536, 1, 851979, 65536, 0, 983050, 65536, 2, 917514, 65536, 1, 851978, 65536, 0, 983049, 65536, 2, 917513, 65536, 1, 851977, 65536, 0, 983048, 0, 2, 917512, 0, 1, 851976, 0, 0, 983057, 131072, 2, 917521, 131072, 1, 851985, 131072, 0, 720899, 3, 0, 786435, 3, 1, 720900, 65539, 0, 786436, 65539, 1, 655374, 3, 1, 655375, 65539, 1, 720910, 3, 1, 720911, 65539, 1, 786446, 3, 1, 786447, 65539, 1, 131082, 3, 1, 131083, 65539, 1, 65546, 3, 1, 65547, 65539, 1, 196618, 3, 2, 196619, 65539, 2, 786448, 2, 458752, 786434, 2, 327680, 393234, 2, 131072, 327683, 2, 131072, 262152, 2, 131072, 786442, 2, 65536, 524302, 3, 1, 524303, 65539, 1, 458766, 3, 0, 458767, 65539, 0, 589838, 3, 1, 589839, 65539, 1)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(917514, 2, 786432)

[node name="QuestionBlock" parent="." instance=ExtResource("16")]
position = Vector2(432, 240)
result = SubResource("Resource_0uqxv")

[node name="Brick" parent="." instance=ExtResource("19")]
position = Vector2(400, 240)

[node name="Brick2" parent="." instance=ExtResource("19")]
position = Vector2(368, 240)

[node name="Goomba" parent="." instance=ExtResource("20")]
position = Vector2(432, 400)
speed = Vector2(0, 0)

[node name="Goomba2" parent="." instance=ExtResource("20")]
position = Vector2(368, 400)
speed = Vector2(0, 0)

[node name="Goomba3" parent="." instance=ExtResource("20")]
position = Vector2(304, 400)
speed = Vector2(0, 0)

[node name="Water" parent="." instance=ExtResource("21")]

[node name="Node2D2" type="Node2D" parent="."]
script = ExtResource("10")

[node name="FancyBush16" type="Sprite2D" parent="Node2D2"]
z_index = 1
position = Vector2(32, 208)
texture = ExtResource("22")

[node name="FancyBush17" type="Sprite2D" parent="Node2D2"]
z_index = -1
position = Vector2(192, 446)
texture = ExtResource("22")

[node name="StarFinderCursor" parent="." instance=ExtResource("23")]
camera_ref = NodePath("../Node2D/Camera2D")

[connection signal="level_complete" from="." to="SecretUnlocker" method="progress_secret"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
